[gd_scene load_steps=3 format=3 uid="uid://ntkyekpbo2t5"]

[ext_resource type="Script" path="res://player_loader/nodes/shmup_player/laser_gun/laser_beam.gd" id="1_2d8yb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ep4ai"]
size = Vector2(1, 7)

[node name="laser_beam" type="Node2D"]
script = ExtResource("1_2d8yb")

[node name="white" type="ColorRect" parent="."]
offset_top = -7.0
offset_right = 1.0

[node name="clear_timer" type="Timer" parent="."]
wait_time = 1.2
one_shot = true
autostart = true

[node name="laser_hitarea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="laser_hitshape" type="CollisionShape2D" parent="laser_hitarea"]
position = Vector2(0.5, -3.5)
shape = SubResource("RectangleShape2D_ep4ai")

[connection signal="timeout" from="clear_timer" to="." method="_on_clear_timer_timeout"]
[connection signal="area_entered" from="laser_hitarea" to="." method="_on_laser_hitarea_area_entered"]
